Bug 1178069 - Check devices capability before enable use of vp8 hardware acceleration using android.media.MediaCodecList and android.media.MediaCodecInfo r=jrmuizel

--HG--
extra : amend_source : f7d209e2dd0bdb9a67c563b5bd2d51da4af56ba8
extra : histedit_source : d8226f7240c5d19d9d2f08f9fc07a83e158505a2%2Cde0d48144261c643fcb23c0f7756906aeded1708